# smx

./: .cvsignore  ChangeLog  CompilingOnUnix.md  CompilingOnWindows.md  Configure.md  CookieAPI.md  FacebookAPI.md  FastCGI.md  Install.md  Maintain.md  Makefile.am  Makefile.in  ProjectHome.md  README  TODO  VersionNumbers.md  Win32Build.conf  Win32Build.pl  aclocal.m4  autogen.sh  buildport  config.h.in  configure  configure.ac  smx.spec.in
docs/: test.html
docs/funcs/: # Time Formats  3. Config Macros  and  avg  base  case  client-authname  client-body  client-headers  client-host  client-ip  client-url  collate  column  comm-open  copy  counter  create-file  create-image  csv-append  day  define  delete  do  encode  enumcolumn  enumform  enumtoken  exec  expr  filename  fmtgtime  fmtltime  form  fqppath  getenv  gettoken  gt  html-clean  httproot  (+30 more)
docs/groups/: 04. String Manipulation  05. Date_S_Time  06. SQL_S_ODBC  07. Utility Functions  11. Encryption
extperl/: .cvsignore  Makefile.am  Makefile.in  extperl.cpp
fcgi/: Makefile.am  Makefile.in  smx-fcgi.cpp  smx-fcgi.ok  test-fcgi  test-fcgi.smx
libsmx/: .cvsignore  Makefile.am  Makefile.in  ary.h  autofunctionlist  base64.h  buf.h  buf_ref.cpp  card.cpp  cgi.cpp  core.cpp  crit.h  crit_unix.cpp  crit_unix.h  crit_win.h  dbd.h  dbd_sqlite3.cpp  dbd_sqlite3.h  dbd_tdb.cpp  dbd_tdb.h  dbh.cpp  dbh.h  debug.in  dparse.cpp  ex.cpp  ex.h  fbuf.h  file.cpp  gd.cpp  hash.c  hash.h  hset-mut.h  hset.cpp  hset.h  io.cpp  libsmx.dev  lstx.h  map.cpp  mapstr.cpp  math.cpp  (+81 more)
m4/: ac_apache.m4
modsmx/: .cvsignore  Makefile.am  Makefile.in  libmod_smx.la  modsmx.cpp  modsmx.h  run_gdb  run_gdb.init
modsmx/tests/: .cvsignore  httpd_test  redir-target.html  test-01-basic.html  test-02-apache.html  test-02-apache.html.ok  test-03-redir.html  test-03-redir.html.ok  test-04-pset.html  test-04-pset.html.ok  test.conf.in
port/: Makefile  Makefile.in  distinfo  pkg-descr  pkg-plist
smx/: .cvsignore  COPYING  ChangeLog  Makefile.am  Makefile.in  Makefile.win  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  copyright.pl  libtool  putrelease  qscgi.cpp  qscgi.h  reconf  smx.cpp  smx.dev  smx.dsw  smx.spec  smx.spec.in  str_new.h
smx/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
smx/docs/: doc2man  edit.html  index.html  leftcol.htx
smx/docs/funcs/: 1. Syntax  2. Command-Line Usage  add  and  append-header  case  counter  decrypt  define  dir  equ  equal  exists  expires_C_  expr  fmtgtime  fmtltime  fset  header  hget  html-clean  iabs  iadd  if  include  invoke  isub  makeltime  pcase  pdbfile  pget  rtrim  rxmatch  safe-mode  server-ip  sleep  smtp-mail  sql  sql-quote  table  (+9 more)
smx/docs/groups/: 01. Basics  02. Math and Logic  04. String Manipulation  07. Utility Functions  08. File Manipulation  09. Macro Creation  09. Macro Handling  10. Session_S_Form Info  12. Hash Functions  13. Exception Handling  14. Miscellaneous
smx/docs/inc/: .cvsignore  init.htx
smx/docs/inc/passwds/: .cvsignore  erik.name  isoepistemia.name  mkrebs.name  will.name
smx/extperl/: Makefile.am  Makefile.in  extperl.cpp  test_perl.cpp
smx/libsmx/: .cvsignore  Makefile.am  Makefile.in  Makefile.win  StdString.h  ary.h  autofunctionlist  base64.cpp  base64.h  buf.h  buf_chain.cpp  buf_chain.h  buf_ref.cpp  buf_ref.h  card.cpp  cgi.cpp  core.cpp  core.h  crit.h  crit_unix.cpp  crit_unix.h  crit_win.h  dbpset.cpp  dbpset.h  debug.h  dparse.cpp  dparse.h  ex.cpp  ex.h  ex2.cpp  ex2.h  fbuf.cpp  fbuf.h  file.cpp  gd.cpp  hash.c  hash.h  hset-mut.h  hset.cpp  hset.h  (+120 more)
smx/m4/: ac_apache.m4
smx/modsmx/: .cvsignore  Makefile.am  Makefile.in  modsmx.cpp  modsmx.dsp  modsmx.h
smx/modsmx/tests/: httpd_test  test-01-basic.html.ok  test.conf
smx/smx/: .cvsignore  Makefile.am  Makefile.in  qscgi.cpp  qscgi.h  smx.dsp
smx/smx/docs/: Makefile  Makefile.in
smx/smx/docs/en/: Makefile  Makefile.in
smx/smx/tests/: .cvsignore  a.out  build  dblib.cpp  safemode.smx  smxtest  test-cgi-form.smx.ok  test-compile.smx  test-decode.smx.ok  test-diaeresis.smx  test-diaeresis.smx.ok  test-exec.smx  test-hset.smx  test-htmlclean.smx.ok  test-long-post.smx  test-mod.smx  test-mod.smx.ok  test-nulls.smx  test-nulls.smx.ok  test-pset.smx  test-pset.smx.ok  test-qs.smx  test-qs.smx.ok  test-rxdom.smx
smx/tests/: .cvsignore  safemode.smx  smxtest  smxtest.cmd  test-bench.smx  test-bench.smx.ok  test-cgi-form.smx  test-cgi-form.smx.ok  test-compile.smx.ok  test-context.smx  test-context.smx.ok  test-decode.smx  test-exec.smx.ok  test-hset.smx  test-hset.smx.ok  test-hset.smx.ok2  test-htmlclean.smx  test-htmlclean.smx.ok  test-mod.smx.ok  test-nulls.smx  test-nulls.smx.ok  test-nulls.smx.ok2  test-pos.smx  test-pset.smx  test-pset.smx.ok  test-pset.smx.ok2  test-qs.smx  test-qs.smx.ok  test-quot.smx  test-quot.smx.ok  test-rx.smx  test-rx.smx.ok  test-rxdom.smx.ok  test-smtp.smx  test-syntax.smx  test-syntax.smx.ok  test-tab.smx  test-tab.smx.ok
smxlang.org/: .htaccess  Smx.pm  board.htx  captcha.html  cookie.htx  docs.tgz  footer.htx  fsave.html  guestbook.htx  header.htx  install.html  leftcol.htx  news.html  test.html  viewcode.html  xml.htx
smxlang.org/docs/: doc2man  edit.html  leftcol.htx
smxlang.org/docs/funcs/: * Time Formats  ++  --  1. Syntax  2. Command-Line Usage  Command-Line Usage  Syntax  abort  abs  asc  bin  client-query  client-state  comm-open  content-type  csv-appendq  defined  dir  dparse  dup  encrypt  enumheader  enumsort  expand  ext  filepath  flush  for  form-saveas  getattrvalue  gset  gte  hdbfile  hour  hset  iadd  isub  left  let  localtime  (+26 more)
smxlang.org/docs/groups/: 03. Flow Control  08. File Manipulation  12. Hash Functions
smxlang.org/guestbook/: guestbook.htx
smxlang_org/: boldblue1.css  example.html  faq.html  guestbook.html  header.htx  index.html  install.html  leftcol.htx  news.html  sqliform.htx  sqlt.html
smxlang_org/guestbook/: index.html
