####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libsmx.la

libsmx_la_SOURCES = base64.cpp qmail.cpp buf_chain.cpp buf_ref.cpp pscache.cpp math.cpp strx.cpp util.cpp unix.cpp time.cpp tabtd.cpp tabpre.cpp tabfmt.cpp string.cpp stdafx.cpp sqlgrp.cpp sql.cpp sock.cpp sha.cpp res.cpp regx.cpp rcex.cpp qthread.cpp qstr.cpp qsched.cpp qpriq.cpp qobj-ctx.cpp qobj.cpp qfopen.cpp qenv.cpp qctx.cpp qctx-comp.cpp psxutil.cpp psximpl.cpp pstable.cpp pset.cpp proto.cpp process.cpp opt.cpp open-enc.cpp map.cpp hset.cpp file.cpp fbuf.cpp ex.cpp dparse.cpp dbpset.cpp crit_unix.cpp core.cpp cgi.cpp card.cpp hash.c mapstr.cpp


test_map_SOURCES = test_map.cpp
test_map_LDADD = mapstr.lo hash.lo

check_PROGRAMS = test_map

TESTS=test_map
