####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libsmx.la

libsmx_la_SOURCES = base64.cpp qmail.cpp buf_ref.cpp pscache.cpp math.cpp strx.cpp util.cpp unix.cpp time.cpp tabtd.cpp tabpre.cpp tabfmt.cpp string.cpp stdafx.cpp sqlgrp.cpp sql.cpp sock.cpp sha.cpp regx.cpp qthread.cpp qstr.cpp qsched.cpp qpriq.cpp qobj-ctx.cpp qobj.cpp qfopen.cpp qenv.cpp qctx.cpp qctx-comp.cpp psxutil.cpp psximpl.cpp pstable.cpp proto.cpp process.cpp opt.cpp open-enc.cpp map.cpp hset.cpp file.cpp fbuf.cpp ex.cpp dparse.cpp dbpset.cpp crit_unix.cpp core.cpp cgi.cpp card.cpp hash.c mapstr.cpp smx_sqlite.cpp


test_map_SOURCES = test_map.cpp
test_map_LDADD = libsmx.la

test_str_SOURCES = test_str.cpp
test_str_LDADD = libsmx.la

test_eval_SOURCES = test_eval.cpp
test_eval_LDADD = libsmx.la

check_PROGRAMS = test_map test_str test_eval

TESTS=test_map test_str test_eval
